--- a/ansible/playbooks/deploy_filebeat.yml
+++ b/ansible/playbooks/deploy_filebeat.yml
@@ -5,7 +5,7 @@
 
   tasks:
 
-  - name: Copy rpm file to server
+  - name: Copy rpm file to host
     copy:
       src: /ansible/roles/filebeat/filebeat-7.14.1-x86_64.rpm
       dest: /tmp/filebeat-7.14.1-x86_64.rpm
@@ -21,11 +21,15 @@
 
   - name: Install config
     template:
-      src: /ansible/roles/filebeat/filebeat.yml.j2
+      src: /var/lib/jenkins/tmp/filebeat.yml
       dest: /etc/filebeat/filebeat.yml
       owner: root
       group: root
       mode: 0600
+    register: filebeat_conf
+
+  - name: Check config
+    command: filebeat test config
 
   - name: Install modules
     command: filebeat modules enable system
@@ -33,8 +37,6 @@
   - name: Start filebeat service
     service:
       name: filebeat
-      state: started
       enabled: yes
-
-  - name: Check config
-    command: filebeat test config
+      state: restarted      
+    when: filebeat_conf.changed
