--- a/ansible/playbooks/deploy_node_exporter.yml
+++ b/ansible/playbooks/deploy_node_exporter.yml
@@ -5,9 +5,9 @@
 
   tasks:
 
-  - name: move node exporter to /usr/local/bin
+  - name: move node exporter to /usr/local/bin on host
     copy:
-      src: /ansible/files/node_exporter-1.2.2.linux-amd64/node_exporter
+      src: /ansible/files/node_exporter-1.3.0.linux-amd64/node_exporter
       dest: /usr/local/bin/node_exporter
       owner: root
       group: root
@@ -28,4 +28,4 @@
       name: node_exporter.service
       enabled: yes
       state: restarted      
-    when: filebeat_conf.changed
+    when: node_serv.changed
