--- a/ansible/files/node_exporter.service
+++ b/ansible/files/node_exporter.service
@@ -6,7 +6,7 @@ After=network.target
 User=nexpuser
 Group=nexpuser
 Type=simple
-ExecStart=/usr/local/bin/node_exporter  --collector.tcpstat --collector.ethtool
+ExecStart=/usr/local/bin/node_exporter --collector.tcpstat --collector.ethtool --web.listen-address=10.10.90.1:9100
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 
